# squs

./: .gitignore  Cargo.toml  README.md  diesel.toml
po/plume/: ar.po  bg.po  ca.po  cs.po  de.po  en.po  eo.po  es.po  fr.po  gl.po  hi.po  hr.po  it.po  ja.po  nb.po  pl.po  plume.pot  pt.po  ro.po  ru.po  sk.po  sr.po  sv.po
po/squs/: ar.po  bg.po  ca.po  cs.po  de.po  en.po  eo.po  es.po  fr.po  gl.po  hi.po  hr.po  it.po  ja.po  nb.po  pl.po  pt.po  ro.po  ru.po  sk.po  squs.pot  sr.po  sv.po
squs-cli/: Cargo.toml
squs-cli/src/: instance.rs  main.rs  migration.rs  users.rs
squs-common/: Cargo.toml
squs-macro/: Cargo.toml
squs-models/: Cargo.toml
squs-models/src/: api_tokens.rs  comments.rs  follows.rs  inbox.rs  instance.rs  lib.rs  likes.rs  mentions.rs  notifications.rs  password_reset_requests.rs  plume_rocket.rs  posts.rs  reshares.rs  schema.rs  users.rs
src/: inbox.rs  main.rs  template_utils.rs
src/api/: apps.rs  authorization.rs  comments.rs  mod.rs  posts.rs
src/routes/: comments.rs  errors.rs  instance.rs  likes.rs  mod.rs  notifications.rs  posts.rs  reshares.rs  session.rs  user.rs  well_known.rs
static/: squs.js
static/css/: squs.css
templates/: base.rs.html
templates/comments/: details.rs.html
templates/instance/: about.rs.html  admin.rs.html  index.rs.html  list.rs.html  users.rs.html
templates/notifications/: index.rs.html
templates/partials/: comment.rs.html  instance_description.rs.html  post_card.rs.html
templates/users/: details.rs.html  edit.rs.html  followers.rs.html  header.rs.html
(+6 files in other folders)
